force-app/main/default/objects/Inventory_Warehouse__c/Inventory_Warehouse__c.object-meta.xml
<CustomObject>
    <label>Inventory Warehouse</label>
    <nameField>
        <label>Warehouse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Warehouses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>