force-app/main/default/objects/Inventory_Warehouse__c/fields/Inventory_Warehouse_Code__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Warehouse_Code__c</fullName>
    <displayFormat>IW-{000000}</displayFormat>
    <label>Inventory Warehouse Code</label>
    <type>AutoNumber</type>
</CustomField>