force-app/main/default/objects/Inventory_Warehouse__c/fields/IW_Address__c.field-meta.xml
<CustomField>
    <fullName>IW_Address__c</fullName>
    <label>IW Address</label>
    <type>TextArea</type>
</CustomField>