force-app/main/default/objects/Inventory_Warehouse__c/fields/Returned_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Returned_Quantity__c</fullName>
    <label>Returned Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>