force-app/main/default/objects/Inventory_Warehouse__c/fields/This_Cost_Should_Return__c.field-meta.xml
<CustomField>
    <fullName>This_Cost_Should_Return__c</fullName>
    <label>This Cost Should Return</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>