force-app/main/default/objects/Inventory_Warehouse__c/fields/Vender__c.field-meta.xml
<CustomField>
    <fullName>Vender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vender</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventory Warehouses</relationshipLabel>
    <relationshipName>Inventory_Warehouses</relationshipName>
    <type>Lookup</type>
</CustomField>