force-app/main/default/objects/Inventory_Warehouse__c/recordTypes/All_Warehouse.recordType-meta.xml
<RecordType>
    <fullName>All_Warehouse</fullName>
    <active>true</active>
    <label>All Warehouse</label>
</RecordType>