force-app/main/default/objects/Inventory_Warehouse__c/recordTypes/Internal_Warehouse.recordType-meta.xml
<RecordType>
    <fullName>Internal_Warehouse</fullName>
    <active>true</active>
    <label>Internal Warehouse</label>
</RecordType>